# mimic

./: .gitignore  Cargo.toml  README.md
demo/: Cargo.toml  build.rs
demo/res/shaders/src/: cube.frag  cube.vert
demo/src/: main.rs
mimic/: Cargo.toml
mimic/src/: lib.rs
mimic_build_utils/: Cargo.toml
mimic_build_utils/src/: build_hacks.rs  lib.rs  resource_bundle.rs  shader_compilation.rs  tools.rs
mimic_common/: Cargo.toml
mimic_common/src/: apptime.rs  config.rs  lib.rs  macros.rs  result.rs  texture.rs  uniforms.rs
mimic_frontend/: Cargo.toml  README.md
mimic_frontend/examples/: demo.rs
mimic_frontend/src/: lib.rs  main_loop.rs  render_commands.rs  result.rs  uniform_specs.rs  winit_window.rs
mimic_frontend/src/cameras/: camera.rs
mimic_frontend/src/uniform_specs/: simple_camera_uniform_spec.rs
mimic_vulkan_backend/: Cargo.toml  build.rs
mimic_vulkan_backend/res/shaders/src/: hardcoded_triangle.vert  simple_triangle.vert
mimic_vulkan_backend/src/: backend.rs  graphics_pipeline.rs  lib.rs  models.rs  msaa.rs  uniforms.rs  window.rs
mimic_vulkan_backend/src/backend/: mimic_backend.rs
mimic_vulkan_backend/src/buffers/: buffer.rs  index_buffer.rs  memory.rs  vertex_buffer.rs
mimic_vulkan_backend/src/demo/: demo.rs
mimic_vulkan_backend/src/depth/: depth_resource.rs  helpers.rs
mimic_vulkan_backend/src/devices/: logical_device.rs  physical_device.rs  queues.rs  requirements.rs
mimic_vulkan_backend/src/drawing/: command_buffers.rs  framebuffers.rs  synchronization.rs
mimic_vulkan_backend/src/graphics_pipeline/: render_pass.rs  shader_module.rs
mimic_vulkan_backend/src/models/: index.rs  textured_model.rs  vertex.rs
mimic_vulkan_backend/src/msaa/: multisampling.rs  util.rs
mimic_vulkan_backend/src/presentation/: image_views.rs  swap_chain.rs
mimic_vulkan_backend/src/textures/: images.rs
mimic_vulkan_backend/src/uniforms/: buffers.rs  descriptors.rs
mimic_vulkan_backend/src/util/: debug.rs  platform.rs  result.rs  tools.rs  validation.rs
mimic_vulkan_backend/src/window/: window.rs  winit_window.rs
rogue_rendering_vulkan_backend/: Cargo.toml  README.md  build.rs
rogue_rendering_vulkan_backend/shaders/spv/: simple_triangle.vert.spv
rogue_rendering_vulkan_backend/shaders/src/: hardcoded_triangle.frag  simple_triangle.vert
rogue_rendering_vulkan_backend/src/: buffers.rs  depth.rs  devices.rs  drawing.rs  graphics_pipeline.rs  lib.rs  msaa.rs  presentation.rs  util.rs  vertex_buffers.rs
rogue_rendering_vulkan_backend/src/buffers/: buffer.rs  index_buffer.rs  memory.rs  vertex.rs  vertex_buffer.rs
rogue_rendering_vulkan_backend/src/demo/: demo.rs
rogue_rendering_vulkan_backend/src/depth/: depth_resource.rs  helpers.rs
rogue_rendering_vulkan_backend/src/devices/: logical_device.rs  mod.rs  physical_device.rs  queues.rs  requirements.rs
rogue_rendering_vulkan_backend/src/drawing/: command_buffers.rs  framebuffers.rs  synchronization.rs
rogue_rendering_vulkan_backend/src/graphics_pipeline/: render_pass.rs  shader_module.rs
rogue_rendering_vulkan_backend/src/models/: index.rs  textured_model.rs
rogue_rendering_vulkan_backend/src/msaa/: multisampling.rs  util.rs
rogue_rendering_vulkan_backend/src/presentation/: image_views.rs  swap_chain.rs
rogue_rendering_vulkan_backend/src/textures/: images.rs
rogue_rendering_vulkan_backend/src/uniforms/: buffers.rs  descriptors.rs
rogue_rendering_vulkan_backend/src/util/: debug.rs  mod.rs  platform.rs  result.rs  tools.rs  validation.rs
rogue_rendering_vulkan_backend/src/vertex_buffers/: memory.rs  vertex.rs
rustylog/: Cargo.toml
rustylog/src/: levels.rs  lib.rs  logger.rs
rustyrogue/: Cargo.toml
rustyutil/: Cargo.toml
rustyutil/src/: apptime.rs  lib.rs
