[package]
name = "demo"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimic_frontend = { path = "../mimic_frontend" }
mimic_vulkan_backend = { path = "../mimic_vulkan_backend" }
mimic_common = { path = "../mimic_common" }
log = "0.4"
env_logger = "0.8.3"

[build-dependencies]
mimic_build_utils = { path = "../mimic_build_utils" }