[package]
name = "mimic"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
edition = "2018"
workspace = ".."


[dependencies]
mimic_frontend = { path = "../mimic_frontend" }
mimic_vulkan_backend = { path = "../mimic_vulkan_backend" }
mimic_common = { path = "../mimic_common" }

# [build-dependencies]
# mimic_build_utils = { path = "../mimic_build_utils" }