[package]
name = "mimic_frontend"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimic_vulkan_backend = { path = "../mimic_vulkan_backend" }
rustyutil = { path = "../rustyutil" }
winit = "0.23.0"
log = "0.4"
env_logger = "0.8.3"
thiserror = "1.0.23"

[[examples]]
name = "demo"
path = "examples/demo.rs"
