[package]
name = "mimic_frontend"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
edition = "2018"

[features]
default = ["panic_on_error_propagation"]
panic_on_error_propagation = []

[dependencies]
env_logger = "0.8.3"
log = "0.4"
mimic_common = { path = "../mimic_common" }
mimic_vulkan_backend = { path = "../mimic_vulkan_backend" }
nalgebra-glm = "0.9.0"
thiserror = "1.0.23"
winit = "0.23.0"

[[examples]]
name = "demo"
path = "examples/demo.rs"
