[package]
name = "mimic_vulkan_backend"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
edition = "2018"
workspace = ".."
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
bitflags = "1.2.1"
image = "0.23.12"
memoffset = "0.6.1"
nalgebra-glm = "0.9.0"
thiserror = "1.0.23"
tobj = "2.0.3"
log = "0.4"

[dependencies.rustyutil]
path = "../rustyutil"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }

[build-dependencies]
mimic_build_utils = { path = "../mimic_build_utils" }

[[bin]]
name = "demo"
path = "src/demo/demo.rs"