[package]
name = "mimic_vulkan_backend"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
edition = "2018"
workspace = ".."
build = "build.rs"

[features]
default = ["panic_on_error_propagation"]
panic_on_error_propagation = []

[dependencies]
ash = "0.31.0"
bitflags = "1.2.1"
image = "0.23.12"
memoffset = "0.6.1"
nalgebra-glm = "0.9.0"
thiserror = "1.0.23"
tobj = {version = "2.0.3", features = ["log"]}
log = "0.4"
mimic_common = { path = "../mimic_common" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }

[build-dependencies]
mimic_build_utils = { path = "../mimic_build_utils" }

[[bin]]
name = "demo"
path = "src/demo/demo.rs"