[package]
name = "rogue_rendering_vulkan_backend"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
winit = "0.23.0"

[[bin]]
name = "demo"
path = "src/demo/demo.rs"