[package]
name = "rogue_rendering_vulkan_backend"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
edition = "2018"
workspace = ".."
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
winit = "0.23.0"
nalgebra-glm = "0.9.0"
memoffset = "0.6.1"

[dependencies.rustylog]
path = "../rustylog"
default-features = false
features = ["loginfo"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }

[[bin]]
name = "demo"
path = "src/demo/demo.rs"