[package]
name = "rustylog"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
edition = "2018"

# to enable a different log level use logdebug, loginfo, logwarn or logerror as feature
# the feature has a list of dependencies which is chrono for time format
[features]
logdebug = ["chrono"]
logwarn = ["chrono"]
loginfo = ["chrono"]
logerror = ["chrono"]

[dependencies]
chrono = {version = "0.4.19", optional = true }
